--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -200,9 +200,33 @@ body {
                 position: absolute;
                 bottom: 30px;
                 right: 25px;
+                z-index: 1;
 
                 .fa-heart {
                     font-size: 22px;
+                }
+
+                .fa-regular:hover {
+                    cursor: pointer;
+                    color: transparent;
+
+                    & + .fa-solid {
+                        opacity: 1;
+                    }
+                }
+
+                .fa-solid {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    background-image: linear-gradient(225deg, #9356DC, #FF79DA);
+                    background-clip: text;
+                    color: transparent;
+                    opacity: 0;
+                    z-index: -1;
+                    transition: opacity 100ms;
                 }
             }
         }
