--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ body {
 }
 .restaurants__wrap .card {
   background-color: #FEFEFE;
+  color: black;
   height: 245px;
   border-radius: 1em;
   box-shadow: 5px 5px 7px #d6d3d3;
@@ -178,16 +179,11 @@ body {
   position: absolute;
   bottom: 30px;
   right: 25px;
-  z-index: 1;
 }
 .restaurants__wrap .card .like-icon .fa-heart {
   font-size: 22px;
 }
-.restaurants__wrap .card .like-icon .fa-regular:hover {
-  cursor: pointer;
-  color: transparent;
-}
-.restaurants__wrap .card .like-icon .fa-regular:hover + .fa-solid {
+.restaurants__wrap .card .like-icon .fa-solid:hover {
   opacity: 1;
 }
 .restaurants__wrap .card .like-icon .fa-solid {
@@ -200,8 +196,7 @@ body {
   background-clip: text;
   color: transparent;
   opacity: 0;
-  z-index: -1;
-  transition: opacity 100ms;
+  transition: opacity 500ms;
 }
 
 footer {
