--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -202,15 +202,15 @@ body {
                 bottom: 30px;
                 right: 25px;
 
-                .fa-heart {
+                .heart {
                     font-size: 22px;
                 }
 
-                .fa-solid:hover {
+                .solid-heart:hover {
                     opacity: 1;
                 }
 
-                .fa-solid {
+                .solid-heart {
                     position: absolute;
                     top: 0;
                     right: 0;
