Modified index.html, scss  and corresponding main.css files

--- a/css/main.css
+++ b/css/main.css
@@ -42,9 +42,19 @@ body {
   padding-top: 8px;
   padding-bottom: 10px;
 }
+@media screen and (min-width: 1024px) {
+  .intro__content {
+    width: 420px;
+  }
+}
 .intro__content p {
   font-size: 18px;
   text-align: center;
+}
+@media screen and (min-width: 1024px) {
+  .intro__content p {
+    white-space: nowrap;
+  }
 }
 .intro__button {
   font-size: 16px;
@@ -64,19 +74,38 @@ body {
 
 .procedures {
   width: 335px;
-  margin: 28px auto 70px auto;
+  margin: 30px auto 70px auto;
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
+@media screen and (min-width: 1024px) {
+  .procedures {
+    width: 960px;
+    margin: 30px auto 60px auto;
+  }
+}
 .procedures h2 {
-  font-size: 26px;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+@media screen and (min-width: 1024px) {
+  .procedures h2 {
+    padding-left: -1px;
+  }
 }
 .procedures__container {
   display: flex;
   flex-direction: column;
   row-gap: 25px;
   align-items: flex-end;
+}
+@media screen and (min-width: 1024px) {
+  .procedures__container {
+    flex-direction: row;
+    column-gap: 30px;
+    justify-content: flex-end;
+  }
 }
 .procedures__container__box {
   background-color: #F6F6F6;
@@ -91,6 +120,13 @@ body {
   padding-left: 38px;
   box-shadow: 5px 5px 7px #d6d3d3;
   position: relative;
+}
+@media screen and (min-width: 1024px) {
+  .procedures__container__box {
+    width: 300px;
+    column-gap: 20px;
+    padding-left: 30px;
+  }
 }
 .procedures__container__box .step {
   font-size: 14px;
@@ -119,20 +155,44 @@ body {
 
 .restaurants {
   background-color: #F6F6F6;
-  padding: 30px 20px 60px 20px;
+  padding-top: 30px;
+  padding-bottom: 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.restaurants h2 {
+  font-size: 24px;
+  padding-right: 200px;
 }
 .restaurants__wrap {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
 }
+@media screen and (min-width: 1024px) {
+  .restaurants__wrap {
+    width: 1000px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 80px;
+    row-gap: 50px;
+    justify-content: flex-start;
+  }
+}
 .restaurants__wrap .card {
   background-color: #FEFEFE;
   color: black;
+  width: 330px;
   height: 245px;
   border-radius: 1em;
   box-shadow: 5px 5px 7px #d6d3d3;
   position: relative;
+}
+@media screen and (min-width: 1024px) {
+  .restaurants__wrap .card {
+    width: 450px;
+  }
 }
 .restaurants__wrap .card img {
   width: 100%;
