--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,9 @@
+@mixin desktop {
+    @media screen and (min-width: 1024px) {
+        @content;
+    }
+}
+
 * {
     box-sizing: border-box;
     font-family: "Roboto", serif;
@@ -46,9 +52,17 @@ body {
         padding-top: 8px;
         padding-bottom: 10px;
 
+        @include desktop {
+            width: 420px;
+        }
+
         & p {
             font-size: 18px;
             text-align: center;
+
+            @include desktop {
+                white-space: nowrap;
+            }
         }
     }
 
@@ -72,13 +86,23 @@ body {
 
 .procedures {
     width: 335px;
-    margin: 28px auto 70px auto;
+    margin: 30px auto 70px auto;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
 
+    @include desktop {
+        width: 960px;
+        margin: 30px auto 60px auto;
+    }
+
     h2 {
-        font-size: 26px;
+        font-size: 24px;
+        margin-bottom: 10px;
+
+        @include desktop {
+            padding-left: -1px;
+        }
     }
 
     &__container {
@@ -86,6 +110,12 @@ body {
         flex-direction: column;
         row-gap: 25px;
         align-items: flex-end;
+
+        @include desktop {
+            flex-direction: row;
+            column-gap: 30px;
+            justify-content: flex-end;
+        }
 
         &__box {
             background-color: #F6F6F6;
@@ -100,6 +130,12 @@ body {
             padding-left: 38px;
             box-shadow: 5px 5px 7px #d6d3d3;
             position: relative;
+
+            @include desktop {
+                width: 300px;
+                column-gap: 20px;
+                padding-left: 30px;
+            }
 
             .step {
                 font-size: 14px;
@@ -134,20 +170,46 @@ body {
 
 .restaurants {
     background-color: #F6F6F6;
-    padding: 30px 20px 60px 20px;
+    padding-top: 30px;
+    padding-bottom: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+        font-size: 24px;
+        padding-right: 200px;
+        // @include desktop {
+        //     margin-top: 0px;
+        // }
+    }
 
     &__wrap {
         display: flex;
         flex-direction: column;
         row-gap: 20px;
 
+        @include desktop {
+            width: 1000px;
+            flex-direction: row;
+            flex-wrap: wrap;
+            column-gap: 80px;
+            row-gap: 50px;
+            justify-content: flex-start;
+        }
+
         .card {
             background-color: #FEFEFE;
             color: black;
+            width: 330px;
             height: 245px;
             border-radius: 1em;
             box-shadow: 5px 5px 7px #d6d3d3;
             position: relative;
+
+            @include desktop {
+                width: 450px;
+            }
 
             img {
                 width: 100%;
