--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -92,8 +92,9 @@ body {
     row-gap: 10px;
 
     @include desktop {
-        width: 960px;
-        margin: 30px auto 60px auto;
+        row-gap: 30px;
+        width: 980px;
+        margin: 30px auto 50px auto;
     }
 
     h2 {
@@ -101,7 +102,7 @@ body {
         margin-bottom: 10px;
 
         @include desktop {
-            padding-left: -1px;
+            margin-bottom: 0px;
         }
     }
 
@@ -113,7 +114,7 @@ body {
 
         @include desktop {
             flex-direction: row;
-            column-gap: 30px;
+            column-gap: 35px;
             justify-content: flex-end;
         }
 
@@ -176,12 +177,20 @@ body {
     flex-direction: column;
     align-items: center;
 
+    @include desktop {
+        padding-bottom: 30px;
+    }
+
     h2 {
         font-size: 24px;
         padding-right: 200px;
-        // @include desktop {
-        //     margin-top: 0px;
-        // }
+
+        @include desktop {
+            padding-right: 850px;
+            padding-bottom: 30px;
+            margin-top: 0px;
+            margin-bottom: 0px;
+        }
     }
 
     &__wrap {
@@ -195,7 +204,7 @@ body {
             flex-wrap: wrap;
             column-gap: 80px;
             row-gap: 50px;
-            justify-content: flex-start;
+            justify-content: center;
         }
 
         .card {
@@ -209,18 +218,27 @@ body {
 
             @include desktop {
                 width: 450px;
+                height: 225px;
             }
 
             img {
                 width: 100%;
-                height: 170px;
+                height: 69%;
                 border-radius: 1em 1em 0 0;
                 object-fit: cover;
                 object-position: 50% 100%;
+
+                @include desktop {
+                    object-position: 50% 70%;
+                }
             }
 
             .enchanted-img {
                 object-position: 50% 60%;
+
+                @include desktop {
+                    object-position: 50% 57%;
+                }
             }
 
             .label {
@@ -293,10 +311,21 @@ footer {
     background-color: #353535;
     padding: 10px 20px 30px 25px;
 
+    @include desktop {
+        padding: 60px 30px 30px 25px;
+        position: relative;
+    }
+
     h2 {
         font-family: "Shrikhand", serif;
         font-size: 18px;
         color: #FEFEFE;
+
+        @include desktop {
+            position: absolute;
+            bottom: 13px;
+            right: 60px;
+        }
     }
 
     .links {
@@ -305,7 +334,18 @@ footer {
         margin: 0;
         line-height: 160%;
 
+        @include desktop {
+            line-height: 0%;
+            text-align: right;
+            padding-right: 180px;
+        }
+
         .link {
+            @include desktop {
+                display: inline;
+                margin-right: 50px;
+            }
+
             i {
                 width: 20px;
                 color: #FEFEFE;
