Modified home page, main scss, and corresponding css files. Renamed menus of 4 restaurants. Added scss file of Bastille's menu. Added scss file of all mixins employed so far.

--- a/css/main.css
+++ b/css/main.css
@@ -340,4 +340,9 @@ footer .links .link .handshake-angle {
   font-size: 10px;
 }
 
+.h3 {
+  font-size: 10px;
+  color: red;
+}
+
 /*# sourceMappingURL=main.css.map */
