--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,3 @@
-@import 'pages/home';
-
-// $breakpoints: (
-//     mobile: 430px
-// );
-
-// @mixin mobile-only {
-//     @media screen and (max-width: map-get($breakpoints, mobile)) {
-//         @content;
-//     }
-// }
-
+@import './utils/mixins';
+@import './pages/home';
+@import './pages/menu-Bastille';
