--- a/sass/pages/_menu-Bastille.scss
+++ b/sass/pages/_menu-Bastille.scss
@@ -1,4 +1,214 @@
-.h3 {
-    font-size: 10px;
-    color: red;
+* {
+    box-sizing: border-box;
+    font-family: "Roboto", serif;
+}
+
+body {
+    margin: 0;
+}
+
+header {
+    .logo {
+        & .logo-img {
+            display: block;
+            margin: 20px auto 14px auto;
+            width: 165px;
+            height: 28px;
+            position: relative;
+        }
+
+        & .back-to-home-icon {
+            position: absolute;
+            top: 25px;
+            left: 20px;
+
+            & .back-to-home {
+                font-size: 20px;
+            }
+        }
+    }
+
+    .bg-img {
+        width: 100%;
+        height: 270px;
+        object-fit: cover;
+    }
+}
+
+.menu {
+    border: 1px solid red;
+    background-color: #f6f6f6;
+    border-radius: 3em 3em 0 0;
+    padding: 15px 10px 50px 10px;
+
+    &__title {
+        position: relative;
+
+        & h1 {
+            font-family: "Shrikhand", serif;
+            font-size: 28px;
+            margin-bottom: 10px;
+            margin-left: 10px;
+        }
+
+        .like-icon {
+            position: absolute;
+            top: 10px;
+            right: 25px;
+
+            .heart {
+                font-size: 22px;
+            }
+
+            .solid-heart:hover {
+                opacity: 1;
+            }
+
+            .solid-heart {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                background-image: linear-gradient(225deg, #9356DC, #FF79DA);
+                background-clip: text;
+                color: transparent;
+                opacity: 0;
+                transition: opacity 500ms;
+            }
+        }
+    }
+
+    &__section {
+        padding-top: 5px;
+        padding-bottom: 15px;
+
+        & h2 {
+            font-size: 16px;
+            font-weight: 400;
+            margin-left: 10px;
+            margin-bottom: 5px;
+        }
+
+        & hr {
+            width: 11%;
+            border: 1.5px solid #99E2D0;
+            margin-top: 0px;
+            margin-left: 10px;
+            margin-bottom: 15px;
+        }
+
+        &__container {
+            display: flex;
+            flex-direction: column;
+            row-gap: 20px;
+
+            &__box {
+                background-color: #FEFEFE;
+                border-radius: 1em;
+                padding: 10px 10px;
+                position: relative;
+
+                & .details {
+                    & h3 {
+                        font-size: 17px;
+                        margin-top: 0px;
+                        margin-bottom: 0px;
+                    }
+
+                    & p {
+                        font-size: 15px;
+                        font-weight: 300;
+                        margin-top: 5px;
+                        margin-bottom: 0px;
+                    }
+                }
+
+                & .price {
+                    font-size: 15px;
+                    font-weight: 700;
+                    position: absolute;
+                    right: 20px;
+                    bottom: 10px;
+                }
+            }
+        }
+    }
+
+    &__button {
+        font-size: 15px;
+        color: white;
+        background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+        width: 180px;
+        height: 45px;
+        display: block;
+        border: none;
+        border-radius: 2em;
+        margin: 30px auto;
+        box-shadow: 5px 5px 7px #d6d3d3;
+
+        &:hover {
+            filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
+        }
+    }
+}
+
+footer {
+    background-color: #353535;
+    padding: 10px 20px 30px 25px;
+
+    @include desktop {
+        padding: 60px 30px 30px 25px;
+        position: relative;
+    }
+
+    h2 {
+        font-family: "Shrikhand", serif;
+        font-size: 18px;
+        color: #FEFEFE;
+
+        @include desktop {
+            position: absolute;
+            bottom: 13px;
+            right: 60px;
+        }
+    }
+
+    .links {
+        list-style-type: none;
+        padding: 0px 20px 0px 0px;
+        margin: 0;
+        line-height: 160%;
+
+        @include desktop {
+            line-height: 0%;
+            text-align: right;
+            padding-right: 180px;
+        }
+
+        .link {
+            @include desktop {
+                display: inline;
+                margin-right: 50px;
+            }
+
+            i {
+                width: 20px;
+                color: #FEFEFE;
+            }
+
+            .utensils {
+                font-size: 14px;
+            }
+
+            a {
+                color: #FEFEFE;
+                text-decoration: none;
+            }
+
+            .handshake-angle {
+                font-size: 10px;
+            }
+        }
+    }
 }
