--- a/sass/pages/_menu-Bastille.scss
+++ b/sass/pages/_menu-Bastille.scss
@@ -14,12 +14,11 @@ header {
             margin: 20px auto 14px auto;
             width: 165px;
             height: 28px;
-            position: relative;
         }
 
         & .back-to-home-icon {
             position: absolute;
-            top: 25px;
+            top: 23px;
             left: 20px;
 
             & .back-to-home {
@@ -36,7 +35,8 @@ header {
 }
 
 .menu {
-    border: 1px solid red;
+    position: relative;
+    margin-top: -45px;
     background-color: #f6f6f6;
     border-radius: 3em 3em 0 0;
     padding: 15px 10px 50px 10px;
