--- a/sass/pages/_menu-LeGourmand.scss
+++ b/sass/pages/_menu-LeGourmand.scss
@@ -107,6 +107,7 @@ header {
                 background-color: #FEFEFE;
                 border-radius: 1em;
                 padding: 10px 10px;
+                box-shadow: 5px 5px 7px #d6d3d3;
                 position: relative;
 
                 & .details {
