--- a/css/main.css
+++ b/css/main.css
@@ -368,10 +368,613 @@ header .bg-img {
   height: 270px;
   object-fit: cover;
 }
+@media screen and (min-width: 1024px) {
+  header .bg-img {
+    object-position: 50% 65%;
+  }
+}
 
 .menu {
   position: relative;
   margin-top: -45px;
+  background-color: #f6f6f6;
+  border-radius: 3em 3em 0 0;
+  padding: 15px 10px 50px 10px;
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    margin-left: 150px;
+    margin-right: 150px;
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+}
+.menu__title {
+  position: relative;
+}
+.menu__title h1 {
+  font-family: "Shrikhand", serif;
+  font-size: 28px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+@media screen and (min-width: 1024px) {
+  .menu__title h1 {
+    margin-left: 125px;
+  }
+}
+.menu__title .like-icon {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+}
+.menu__title .like-icon .heart {
+  font-size: 22px;
+}
+.menu__title .like-icon .solid-heart:hover {
+  opacity: 1;
+}
+.menu__title .like-icon .solid-heart {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(225deg, #9356DC, #FF79DA);
+  background-clip: text;
+  color: transparent;
+  opacity: 0;
+  transition: opacity 500ms;
+}
+@media screen and (min-width: 1024px) {
+  .menu__title .like-icon {
+    right: 100px;
+  }
+}
+.menu__section {
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+.menu__section h2 {
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+.menu__section hr {
+  width: 11%;
+  border: 1.5px solid #99E2D0;
+  margin-top: 0px;
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
+.menu__section__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.menu__section__container__box {
+  background-color: #FEFEFE;
+  border-radius: 1em;
+  padding: 10px 10px;
+  box-shadow: 5px 5px 7px #d6d3d3;
+  position: relative;
+}
+.menu__section__container__box .details h3 {
+  font-size: 17px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.menu__section__container__box .details p {
+  font-size: 15px;
+  font-weight: 300;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+.menu__section__container__box .price {
+  font-size: 15px;
+  font-weight: 700;
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+}
+.menu__button {
+  font-size: 15px;
+  color: white;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+  width: 180px;
+  height: 45px;
+  display: block;
+  border: none;
+  border-radius: 2em;
+  margin: 30px auto;
+  box-shadow: 5px 5px 7px #d6d3d3;
+}
+.menu__button:hover {
+  filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
+}
+
+footer {
+  background-color: #353535;
+  padding: 10px 20px 30px 25px;
+}
+@media screen and (min-width: 1024px) {
+  footer {
+    padding: 60px 30px 30px 25px;
+    position: relative;
+  }
+}
+footer h2 {
+  font-family: "Shrikhand", serif;
+  font-size: 18px;
+  color: #FEFEFE;
+}
+@media screen and (min-width: 1024px) {
+  footer h2 {
+    position: absolute;
+    bottom: 13px;
+    right: 60px;
+  }
+}
+footer .links {
+  list-style-type: none;
+  padding: 0px 20px 0px 0px;
+  margin: 0;
+  line-height: 160%;
+}
+@media screen and (min-width: 1024px) {
+  footer .links {
+    line-height: 0%;
+    text-align: right;
+    padding-right: 180px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  footer .links .link {
+    display: inline;
+    margin-right: 50px;
+  }
+}
+footer .links .link i {
+  width: 20px;
+  color: #FEFEFE;
+}
+footer .links .link .utensils {
+  font-size: 14px;
+}
+footer .links .link a {
+  color: #FEFEFE;
+  text-decoration: none;
+}
+footer .links .link .handshake-angle {
+  font-size: 10px;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", serif;
+}
+
+body {
+  margin: 0;
+}
+
+header .logo .logo-img {
+  display: block;
+  margin: 20px auto 14px auto;
+  width: 165px;
+  height: 28px;
+}
+header .logo .back-to-home-icon {
+  position: absolute;
+  top: 25px;
+  left: 20px;
+}
+header .logo .back-to-home-icon .back-to-home {
+  font-size: 20px;
+}
+header .bg-img {
+  width: 100%;
+  height: 270px;
+  object-fit: cover;
+}
+@media screen and (min-width: 1024px) {
+  header .bg-img {
+    object-position: 50% 65%;
+  }
+}
+
+.menu {
+  background-color: #f6f6f6;
+  border-radius: 3em 3em 0 0;
+  padding: 15px 10px 50px 10px;
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    margin-left: 150px;
+    margin-right: 150px;
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+}
+.menu__title {
+  position: relative;
+}
+.menu__title h1 {
+  font-family: "Shrikhand", serif;
+  font-size: 28px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+@media screen and (min-width: 1024px) {
+  .menu__title h1 {
+    margin-left: 80px;
+  }
+}
+.menu__title .like-icon {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+}
+.menu__title .like-icon .heart {
+  font-size: 22px;
+}
+.menu__title .like-icon .solid-heart:hover {
+  opacity: 1;
+}
+.menu__title .like-icon .solid-heart {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(225deg, #9356DC, #FF79DA);
+  background-clip: text;
+  color: transparent;
+  opacity: 0;
+  transition: opacity 500ms;
+}
+@media screen and (min-width: 1024px) {
+  .menu__title .like-icon {
+    right: 80px;
+  }
+}
+.menu__section {
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+.menu__section h2 {
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+.menu__section hr {
+  width: 11%;
+  border: 1.5px solid #99E2D0;
+  margin-top: 0px;
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
+.menu__section__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.menu__section__container__box {
+  background-color: #FEFEFE;
+  border-radius: 1em;
+  padding: 10px 10px;
+  box-shadow: 5px 5px 7px #d6d3d3;
+  position: relative;
+}
+.menu__section__container__box .details h3 {
+  font-size: 17px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.menu__section__container__box .details p {
+  font-size: 15px;
+  font-weight: 300;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+.menu__section__container__box .price {
+  font-size: 15px;
+  font-weight: 700;
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+}
+.menu__button {
+  font-size: 15px;
+  color: white;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+  width: 180px;
+  height: 45px;
+  display: block;
+  border: none;
+  border-radius: 2em;
+  margin: 30px auto;
+  box-shadow: 5px 5px 7px #d6d3d3;
+}
+.menu__button:hover {
+  filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
+}
+
+footer {
+  background-color: #353535;
+  padding: 10px 20px 30px 25px;
+}
+@media screen and (min-width: 1024px) {
+  footer {
+    padding: 60px 30px 30px 25px;
+    position: relative;
+  }
+}
+footer h2 {
+  font-family: "Shrikhand", serif;
+  font-size: 18px;
+  color: #FEFEFE;
+}
+@media screen and (min-width: 1024px) {
+  footer h2 {
+    position: absolute;
+    bottom: 13px;
+    right: 60px;
+  }
+}
+footer .links {
+  list-style-type: none;
+  padding: 0px 20px 0px 0px;
+  margin: 0;
+  line-height: 160%;
+}
+@media screen and (min-width: 1024px) {
+  footer .links {
+    line-height: 0%;
+    text-align: right;
+    padding-right: 180px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  footer .links .link {
+    display: inline;
+    margin-right: 50px;
+  }
+}
+footer .links .link i {
+  width: 20px;
+  color: #FEFEFE;
+}
+footer .links .link .utensils {
+  font-size: 14px;
+}
+footer .links .link a {
+  color: #FEFEFE;
+  text-decoration: none;
+}
+footer .links .link .handshake-angle {
+  font-size: 10px;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", serif;
+}
+
+body {
+  margin: 0;
+}
+
+header .logo .logo-img {
+  display: block;
+  margin: 20px auto 14px auto;
+  width: 165px;
+  height: 28px;
+  position: relative;
+}
+header .logo .back-to-home-icon {
+  position: absolute;
+  top: 25px;
+  left: 20px;
+}
+header .logo .back-to-home-icon .back-to-home {
+  font-size: 20px;
+}
+header .bg-img {
+  width: 100%;
+  height: 270px;
+  object-fit: cover;
+}
+
+.menu {
+  background-color: #f6f6f6;
+  border-radius: 3em 3em 0 0;
+  padding: 15px 10px 50px 10px;
+}
+.menu__title {
+  position: relative;
+}
+.menu__title h1 {
+  font-family: "Shrikhand", serif;
+  font-size: 28px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+.menu__title .like-icon {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+}
+.menu__title .like-icon .heart {
+  font-size: 22px;
+}
+.menu__title .like-icon .solid-heart:hover {
+  opacity: 1;
+}
+.menu__title .like-icon .solid-heart {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(225deg, #9356DC, #FF79DA);
+  background-clip: text;
+  color: transparent;
+  opacity: 0;
+  transition: opacity 500ms;
+}
+.menu__section {
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+.menu__section h2 {
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+.menu__section hr {
+  width: 11%;
+  border: 1.5px solid #99E2D0;
+  margin-top: 0px;
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
+.menu__section__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.menu__section__container__box {
+  background-color: #FEFEFE;
+  border-radius: 1em;
+  padding: 10px 10px;
+  box-shadow: 5px 5px 7px #d6d3d3;
+  position: relative;
+}
+.menu__section__container__box .details h3 {
+  font-size: 17px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.menu__section__container__box .details p {
+  font-size: 15px;
+  font-weight: 300;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+.menu__section__container__box .price {
+  font-size: 15px;
+  font-weight: 700;
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+}
+.menu__button {
+  font-size: 15px;
+  color: white;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+  width: 180px;
+  height: 45px;
+  display: block;
+  border: none;
+  border-radius: 2em;
+  margin: 30px auto;
+  box-shadow: 5px 5px 7px #d6d3d3;
+}
+.menu__button:hover {
+  filter: brightness(1.05) drop-shadow(5px 5px 7px #d6d3d3);
+}
+
+footer {
+  background-color: #353535;
+  padding: 10px 20px 30px 25px;
+}
+@media screen and (min-width: 1024px) {
+  footer {
+    padding: 60px 30px 30px 25px;
+    position: relative;
+  }
+}
+footer h2 {
+  font-family: "Shrikhand", serif;
+  font-size: 18px;
+  color: #FEFEFE;
+}
+@media screen and (min-width: 1024px) {
+  footer h2 {
+    position: absolute;
+    bottom: 13px;
+    right: 60px;
+  }
+}
+footer .links {
+  list-style-type: none;
+  padding: 0px 20px 0px 0px;
+  margin: 0;
+  line-height: 160%;
+}
+@media screen and (min-width: 1024px) {
+  footer .links {
+    line-height: 0%;
+    text-align: right;
+    padding-right: 180px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  footer .links .link {
+    display: inline;
+    margin-right: 50px;
+  }
+}
+footer .links .link i {
+  width: 20px;
+  color: #FEFEFE;
+}
+footer .links .link .utensils {
+  font-size: 14px;
+}
+footer .links .link a {
+  color: #FEFEFE;
+  text-decoration: none;
+}
+footer .links .link .handshake-angle {
+  font-size: 10px;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", serif;
+}
+
+body {
+  margin: 0;
+}
+
+header .logo .logo-img {
+  display: block;
+  margin: 20px auto 14px auto;
+  width: 165px;
+  height: 28px;
+  position: relative;
+}
+header .logo .back-to-home-icon {
+  position: absolute;
+  top: 25px;
+  left: 20px;
+}
+header .logo .back-to-home-icon .back-to-home {
+  font-size: 20px;
+}
+header .bg-img {
+  width: 100%;
+  height: 270px;
+  object-fit: cover;
+}
+
+.menu {
   background-color: #f6f6f6;
   border-radius: 3em 3em 0 0;
   padding: 15px 10px 50px 10px;
