--- a/sass/pages/_menu-Bastille.scss
+++ b/sass/pages/_menu-Bastille.scss
@@ -31,6 +31,10 @@ header {
         width: 100%;
         height: 270px;
         object-fit: cover;
+
+        @include desktop {
+            object-position: 50% 65%;
+        }
     }
 }
 
@@ -41,6 +45,13 @@ header {
     border-radius: 3em 3em 0 0;
     padding: 15px 10px 50px 10px;
 
+    @include desktop {
+        margin-left: 150px;
+        margin-right: 150px;
+        padding-left: 150px;
+        padding-right: 150px;
+    }
+
     &__title {
         position: relative;
 
@@ -49,6 +60,10 @@ header {
             font-size: 28px;
             margin-bottom: 10px;
             margin-left: 10px;
+            
+            @include desktop {
+                margin-left: 125px;
+            }
         }
 
         .like-icon {
@@ -75,6 +90,10 @@ header {
                 color: transparent;
                 opacity: 0;
                 transition: opacity 500ms;
+            }
+
+            @include desktop {
+                right: 100px;
             }
         }
     }
