--- a/sass/pages/_menu-LeGourmand.scss
+++ b/sass/pages/_menu-LeGourmand.scss
@@ -14,7 +14,6 @@ header {
             margin: 20px auto 14px auto;
             width: 165px;
             height: 28px;
-            position: relative;
         }
 
         & .back-to-home-icon {
@@ -32,14 +31,24 @@ header {
         width: 100%;
         height: 270px;
         object-fit: cover;
+
+        @include desktop {
+            object-position: 50% 65%;
+        }
     }
 }
 
 .menu {
-    border: 1px solid red;
     background-color: #f6f6f6;
     border-radius: 3em 3em 0 0;
     padding: 15px 10px 50px 10px;
+
+    @include desktop {
+        margin-left: 150px;
+        margin-right: 150px;
+        padding-left: 150px;
+        padding-right: 150px;
+    }
 
     &__title {
         position: relative;
@@ -49,6 +58,10 @@ header {
             font-size: 28px;
             margin-bottom: 10px;
             margin-left: 10px;
+
+            @include desktop {
+                margin-left: 80px;
+            }
         }
 
         .like-icon {
@@ -75,6 +88,10 @@ header {
                 color: transparent;
                 opacity: 0;
                 transition: opacity 500ms;
+            }
+
+            @include desktop {
+                right: 80px;
             }
         }
     }
