--- a/sass/pages/_menu-TheEnchantedPlate.scss
+++ b/sass/pages/_menu-TheEnchantedPlate.scss
@@ -14,7 +14,6 @@ header {
             margin: 20px auto 14px auto;
             width: 165px;
             height: 28px;
-            position: relative;
         }
 
         & .back-to-home-icon {
@@ -32,6 +31,10 @@ header {
         width: 100%;
         height: 270px;
         object-fit: cover;
+
+        @include desktop {
+            object-position: 50% 65%;
+        }
     }
 }
 
@@ -40,14 +43,28 @@ header {
     border-radius: 3em 3em 0 0;
     padding: 15px 10px 50px 10px;
 
+    @include desktop {
+        margin-left: 150px;
+        margin-right: 150px;
+        padding-left: 150px;
+        padding-right: 150px;
+    }
+
     &__title {
         position: relative;
 
         & h1 {
             font-family: "Shrikhand", serif;
             font-size: 28px;
+            text-wrap: wrap;
             margin-bottom: 10px;
             margin-left: 10px;
+            margin-right: 100px;
+
+            @include desktop {
+                margin-left: 40px;
+                margin-right: 0px;
+            }
         }
 
         .like-icon {
@@ -74,6 +91,10 @@ header {
                 color: transparent;
                 opacity: 0;
                 transition: opacity 500ms;
+            }
+
+            @include desktop {
+                right: 40px;
             }
         }
     }
