--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,43 @@ body {
   margin: 0;
 }
 
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  width: 200px;
+  height: 200px;
+  margin-top: -100px;
+  margin-left: -100px;
+  margin-bottom: -100px;
+  border: 20px solid #eaeaea;
+  border-top: 20px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s cubic-bezier(0.37, 0, 0.745, 0.715) forwards;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+.page {
+  animation: fadeIn 0.5s 1s backwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .logo img {
   display: block;
   margin: 20px auto 14px auto;
