--- a/sass/pages/_menu-Bastille.scss
+++ b/sass/pages/_menu-Bastille.scss
@@ -31,7 +31,7 @@ header {
         width: 100%;
         height: 270px;
         object-fit: cover;
-        
+
         @include tablet {
             object-position: 50% 65%;
         }
@@ -65,7 +65,7 @@ header {
             font-size: 28px;
             margin-bottom: 10px;
             margin-left: 10px;
-            
+
             @include desktop {
                 margin-left: 40px;
             }
@@ -156,7 +156,37 @@ header {
                     right: 20px;
                     bottom: 10px;
                 }
+
+                animation: fadeIn 1s ease-in-out forwards;
+
+                @for $i from 1 through 3 {
+                    &--#{$i} {
+                        animation-delay: 100ms * $i;
+                    }
+                }
+
+                @for $i from 4 through 6 {
+                    &--#{$i} {
+                        animation-delay: 100ms * $i;
+                    }
+                }
+
+                @for $i from 7 through 9 {
+                    &--#{$i} {
+                        animation-delay: 100ms * $i;
+                    }
+                }
             }
+        }
+    }
+
+    @keyframes fadeIn {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
         }
     }
 
