--- a/sass/pages/_menu-TheFullPlate.scss
+++ b/sass/pages/_menu-TheFullPlate.scss
@@ -154,6 +154,26 @@ header {
                     right: 20px;
                     bottom: 10px;
                 }
+
+                animation: fadeIn 1s ease-in-out forwards;
+
+                @for $i from 1 through 3 {
+                    &--#{$i} {
+                        animation-delay: 100ms * $i;
+                    }
+                }
+
+                @for $i from 4 through 6 {
+                    &--#{$i} {
+                        animation-delay: 100ms * $i;
+                    }
+                }
+
+                @for $i from 7 through 9 {
+                    &--#{$i} {
+                        animation-delay: 100ms * $i;
+                    }
+                }
             }
         }
     }
